--- a/Closure/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Closure/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,11 +75,11 @@ MRUItem0=/Game/Maps/ThirdPersonExampleMap
 MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SelectedPaths=/Game/Sounds
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
-ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
-ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.174491
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.825509
 ContentBrowserTab1.HorizontalSplitter.SlotSize0=0.900000
 ContentBrowserTab1.HorizontalSplitter.SlotSize1=0.900000
 ContentBrowserTab1.ActiveTypeFilters=
@@ -112,7 +112,7 @@ ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/ThirdPersonExampleMap
+LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -728,6 +728,8 @@ MovieSceneCapture.TimeStamp=2019.03.05-22.00.51
 MovieSceneCapture.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2019.03.05-22.00.50
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2019.03.05-22.00.49
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -740,8 +742,201 @@ StaticMeshActor.Rendering=True
 StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
 StaticMeshActor.Actor=True
+CryptoKeysSettings.Encryption=True
+CryptoKeysSettings.Signing=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
+GameplayTagsSettings.GameplayTags=True
+GameplayTagsSettings.Advanced Replication=True
+GameplayTagsDeveloperSettings.GameplayTags=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Packaging=True
+ProjectPackagingSettings.Blueprints=True
+ProjectPackagingSettings.Prerequisites=True
+HardwareTargetingSettings.Target Hardware=True
+HardwareTargetingSettings.Pending Changes=True
+AssetManagerSettings.Asset Manager=True
+AssetManagerSettings.Redirects=True
+AISystem.AISystem=True
+AISystem.Movement=True
+AISystem.Gameplay Tasks=True
+AISystem.EQS=True
+AISystem.PerceptionSystem=True
+AnimationSettings.Compression=True
+AnimationSettings.Performance=True
+AudioSettings.Dialogue=True
+AudioSettings.Audio=True
+AudioSettings.Quality=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+ConsoleSettings.Colors=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CrowdManager.Config=True
+EndUserSettings.Privacy=True
+EndUserSettings.PrivacyDetails=True
+GameplayDebuggerConfig.Input=True
+GameplayDebuggerConfig.Display=True
+GameplayDebuggerConfig.AddOns=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Anim Blueprints=True
+Engine.Framerate=True
+Engine.Screenshots=True
+HierarchicalLODSettings.HLODSystem=True
+InputSettings.Bindings=True
+InputSettings.MouseProperties=True
+InputSettings.ViewportProperties=True
+InputSettings.Mobile=True
+InputSettings.Console=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Tick=True
+NavigationSystem.Navigation=True
+NavigationSystem.NavigationSystem=True
+NavigationSystem.Navigation Enforcing=True
+NavigationSystem.Agents=True
+NetworkSettings.libcurl=True
+NetworkSettings.World=True
+NetworkSettings.replication=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Optimization=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.Physical Surface=True
+RendererSettings.Mobile=True
+RendererSettings.Materials=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.Reflections=True
+RendererSettings.ForwardRenderer=True
+RendererSettings.Lighting=True
+RendererSettings.Tessellation=True
+RendererSettings.Translucency=True
+RendererSettings.Postprocessing=True
+RendererSettings.DefaultSettings=True
+RendererSettings.Optimizations=True
+RendererSettings.Debugging=True
+RendererSettings.VR=True
+RendererSettings.Editor=True
+RendererSettings.ShaderPermutationReduction=True
+RendererSettings.MobileShaderPermutationReduction=True
+RendererSettings.Experimental=True
+RendererOverrideSettings.ShaderPermutationReduction=True
+RendererOverrideSettings.Miscellaneous=True
+SlateSettings.ConstraintCanvas=True
+StreamingSettings.PackageStreaming=True
+StreamingSettings.LevelStreaming=True
+TutorialSettings.Tutorials=True
+UserInterfaceSettings.Focus=True
+UserInterfaceSettings.Hardware Cursors=True
+UserInterfaceSettings.Software Cursors=True
+UserInterfaceSettings.DPI Scaling=True
+UserInterfaceSettings.Widgets=True
+LevelEditor2DSettings.General=True
+LevelEditor2DSettings.LayerSnapping=True
+EditorProjectAppearanceSettings.Units=True
+BlueprintEditorProjectSettings.Blueprints=True
+BlueprintEditorProjectSettings.Actors=True
+ClassViewerProjectSettings.ClassVisibilityManagement=True
+ProxyLODMeshSimplificationSettings.General=True
+MovieSceneToolsProjectSettings.Timeline=True
+MovieSceneToolsProjectSettings.Shots=True
+MovieSceneToolsProjectSettings.TrackSettings=True
+MeshSimplificationSettings.General=True
+PaperImporterSettings.NewAssetSettings=True
+PaperImporterSettings.ImportSettings=True
+PaperImporterSettings.MaterialSettings=True
+UMGEditorProjectSettings.Compiler=True
+UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Class Filtering=True
+AndroidRuntimeSettings.APK Packaging=True
+AndroidRuntimeSettings.Build=True
+AndroidRuntimeSettings.Advanced APK Packaging=True
+AndroidRuntimeSettings.DistributionSigning=True
+AndroidRuntimeSettings.GooglePlayServices=True
+AndroidRuntimeSettings.Icons=True
+AndroidRuntimeSettings.LaunchImages=True
+AndroidRuntimeSettings.DaydreamAppTile=True
+AndroidRuntimeSettings.MultiTextureFormats=True
+AndroidRuntimeSettings.GraphicsDebugger=True
+AndroidRuntimeSettings.Audio=True
+AndroidRuntimeSettings.TextureFormatPriorities=True
+ShaderPlatformQualitySettings.Forward Rendering Overrides=True
+AndroidSDKSettings.SDKConfig=True
+HTML5TargetSettings.Emscripten=True
+HTML5TargetSettings.Audio=True
+HTML5TargetSettings.Packaging=True
+HTML5TargetSettings.Launch=True
+HTML5TargetSettings.Amazon_S3=True
+IOSRuntimeSettings.Mobile Provision=True
+IOSRuntimeSettings.BundleInformation=True
+IOSRuntimeSettings.Orientation=True
+IOSRuntimeSettings.Input=True
+IOSRuntimeSettings.Rendering=True
+IOSRuntimeSettings.OS Info=True
+IOSRuntimeSettings.PowerUsage=True
+IOSRuntimeSettings.Devices=True
+IOSRuntimeSettings.Build=True
+IOSRuntimeSettings.Online=True
+IOSRuntimeSettings.Extra PList Data=True
+IOSRuntimeSettings.Required Icons=True
+IOSRuntimeSettings.Optional Icons=True
+IOSRuntimeSettings.Launch Images=True
+IOSRuntimeSettings.Audio=True
+LinuxTargetSettings.Targeted RHIs=True
+LinuxTargetSettings.Splash=True
+LinuxTargetSettings.Icon=True
+LinuxTargetSettings.Audio=True
+MacTargetSettings.Targeted RHIs=True
+MacTargetSettings.Rendering=True
+MacTargetSettings.Splash=True
+MacTargetSettings.Icon=True
+MacTargetSettings.Audio=True
+WindowsTargetSettings.Targeted RHIs=True
+WindowsTargetSettings.Toolchain=True
+WindowsTargetSettings.OS Info=True
+WindowsTargetSettings.Splash=True
+WindowsTargetSettings.Icon=True
+WindowsTargetSettings.Audio=True
+AvfMediaSettings.Debug=True
+ImgMediaSettings.General=True
+ImgMediaSettings.Caching=True
+ImgMediaSettings.EXR=True
+ImgMediaSettings.Proxies=True
+LevelSequenceEditorSettings.Tracks=True
+OculusHMDRuntimeSettings.SplashScreen=True
+PaperRuntimeSettings.Experimental=True
+PaperRuntimeSettings.Settings=True
+TcpMessagingSettings.Transport=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
+WmfMediaSettings.Media=True
+WmfMediaSettings.Debug=True
 
 [MessageLog]
 LastLogListing=EditorErrors
+
+[DetailPropertyExpansion]
+EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
+Object=
 
 
