Moved around some stuff

--- a/Closure/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Closure/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,7 +76,7 @@ MRUItem0=/Game/Maps/ThirdPersonExampleMap
 MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -130,6 +130,8 @@ SequenceBrowser.HiddenColumns=ParentAsset
 SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Maps/ThirdPersonExampleMap
@@ -137,6 +139,7 @@ LastLevel=/Game/Maps/ThirdPersonExampleMap
 [AssetEditorManager]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Child.Child
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=165.000
@@ -747,8 +750,8 @@ HierarchicalLODOutliner.TimeStamp=2019.04.12-02.31.36
 HierarchicalLODOutliner.LastCompileMethod=External
 MovieSceneCapture.TimeStamp=2019.04.12-02.31.37
 MovieSceneCapture.LastCompileMethod=External
-HierarchicalLODUtilities.TimeStamp=2019.03.05-22.00.50
-HierarchicalLODUtilities.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2019.04.12-02.31.36
+HierarchicalLODUtilities.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2019.04.12-02.31.35
 BlueprintGraph.LastCompileMethod=External
 SkeletonEditor.TimeStamp=2019.04.12-02.31.38
@@ -1453,6 +1456,19 @@ REINST_AdultPawn_C_819.Input=True
 REINST_AdultPawn_C_819.Actor=True
 StructProperty.Variable=True
 StructProperty.DefaultValueCategory=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+StaticMeshComponent.Materials=True
 
 [MessageLog]
 LastLogListing=PIE
