Attach and detach working with zone triggers

--- a/Closure/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Closure/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,7 +76,7 @@ MRUItem0=/Game/Maps/ThirdPersonExampleMap
 MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -139,17 +139,16 @@ LastLevel=/Game/Maps/ThirdPersonExampleMap
 [AssetEditorManager]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/AdultPawn.AdultPawn
-OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin
-OpenAssetsAtExit=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton
-OpenAssetsAtExit=/Game/Child.Child
 OpenAssetsAtExit=/Game/GameManager.GameManager
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode
+OpenAssetsAtExit=/Game/AdultPawn.AdultPawn
+OpenAssetsAtExit=/Game/Child.Child
+OpenAssetsAtExit=/Game/LevelDatabaseActor.LevelDatabaseActor
+OpenAssetsAtExit=/Game/Zone1Trigger.Zone1Trigger
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=165.000
+ScreenPosition=X=352.000 Y=147.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -165,7 +164,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../Users/varun.nav7759/Unreal Projects/MiniProduction2/Closure/Content/Maps
+UNR=../../../../Users/varun.nav7759/Unreal Projects/MiniProduction2/Closure/Content/Maps
 BRUSH=../../../../MiniProduction2/Closure/Content/
 FBX=../../../../MiniProduction2/Closure/Content/
 FBXAnim=../../../../MiniProduction2/Closure/Content/
@@ -1539,6 +1538,21 @@ BoxComponent.Tags=True
 BoxComponent.ComponentReplication=True
 BoxComponent.Cooking=True
 BoxComponent.Events=True
+GameManager_C.Default=True
+Child_C.Default=True
+LevelDatabaseActor_C.Tick=True
+LevelDatabaseActor_C.Rendering=True
+LevelDatabaseActor_C.Replication=True
+LevelDatabaseActor_C.Input=True
+LevelDatabaseActor_C.Actor=True
+LevelDatabaseActor_C.TransformCommon=True
+Zone1Trigger_C.Tick=True
+Zone1Trigger_C.Rendering=True
+Zone1Trigger_C.Replication=True
+Zone1Trigger_C.Input=True
+Zone1Trigger_C.Actor=True
+Zone1Trigger_C.TransformCommon=True
+Zone1Trigger_C.Default=True
 
 [MessageLog]
 LastLogListing=PIE
@@ -1559,6 +1573,8 @@ LastLogListing=PIE
 /Game/M_PineLeaf.M_PineLeaf=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/Zone1Trigger.Zone1Trigger;
+RecentlyPlaced=/Game/LevelDatabaseActor.LevelDatabaseActor;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/AdultPawn.AdultPawn;
 RecentlyPlaced=/Game/Child.Child;
 RecentlyPlaced=/Game/Adult.Adult;
@@ -1570,7 +1586,7 @@ Adult_C=
 Pawn=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-Object=
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 FloatingPawnMovement="\"Object.NavMovement.NavAgentProps\" "
 PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
@@ -1581,8 +1597,8 @@ StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.Response
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
