--- a/Closure/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Closure/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -72,6 +72,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 RotGridEnabled=False
 SnapScaleEnabled=False
 GridEnabled=False
+CurrentPosGridSize=8
 
 [MRU]
 MRUItem0=/Game/CallumContent/EnvironmentLevel
@@ -739,8 +740,8 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 
 [LandscapeEdit]
-ToolStrength=0.104762
-BrushRadius=145.000000
+ToolStrength=0.152381
+BrushRadius=308.000000
 BrushFalloff=1.000000
 AlphaBrushAutoRotate=True
 WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
@@ -758,7 +759,7 @@ ShowUnusedLayers=True
 NoiseScale=21.184755
 
 [FoliageEdit]
-Radius=262.000000
+Radius=50.000000
 WindowPosition=-1,-1,284,400
 bFilterFoliage=False
 bShowPaletteItemDetails=True
@@ -825,17 +826,21 @@ PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,
+StaticMesh=StaticMesh.LOD0.MeshReductionSettings,
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/CallumContent/Ferns.Ferns;
+RecentlyPlaced=/Game/CallumContent/Ivy_tree_1.Ivy_tree_1;
+RecentlyPlaced=/Game/CallumContent/Pine_Tree.Pine_Tree;
+RecentlyPlaced=/Game/CallumContent/Basic_tree_2.Basic_tree_2;
 RecentlyPlaced=/Game/CallumContent/Basic_tree_1.Basic_tree_1;
 RecentlyPlaced=/Game/CallumContent/Basic_tree_1_Tree_0.Basic_tree_1_Tree_0;
-RecentlyPlaced=/Game/CallumContent/Pine_tree.Pine_tree;
 RecentlyPlaced=/Game/CallumContent/M_Grey.M_Grey;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/CallumContent/Ferns.Ferns;
 RecentlyPlaced=/Game/CallumContent/Frost_Lily_plant.Frost_Lily_plant;
 RecentlyPlaced=/Game/CallumContent/Tree_Trunk.Tree_Trunk;
 RecentlyPlaced=/Game/CallumContent/Fountain.Fountain;
@@ -844,9 +849,6 @@ RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBas
 RecentlyPlaced=/Game/CallumContent/Bridge.Bridge;
 RecentlyPlaced=/Game/CallumContent/Wooden_Bench.Wooden_Bench;
 RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
-RecentlyPlaced=/Script/Engine.AtmosphericFog;/Engine/Transient.ActorFactoryAtmosphericFog_0
-RecentlyPlaced=/Game/CallumContent/Red_Tree.Red_Tree;
-RecentlyPlaced=/Game/CallumContent/Yellow_Tree.Yellow_Tree;
 
 [DetailCategories]
 SkyLight.TransformCommon=True
@@ -1230,6 +1232,17 @@ MaterialExpressionWorldPosition.UMaterialExpressionWorldPosition=True
 MaterialExpressionWorldPosition.MaterialExpression=True
 MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
 MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.DistanceFieldShadows=True
+PointLight.Tags=True
+PointLight.Cooking=True
+PointLight.Actor=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -1303,7 +1316,7 @@ bShowMobileStats=False
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.ImportSettings.AssetImportData\" "
+Object=
 MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" \"Object.Layers.Layers[4]\" "
 MaterialExpression=
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -1350,11 +1363,24 @@ PrimType=1
 /Game/CallumContent/Basic_tree_1.Basic_tree_1=0
 /Game/CallumContent/Pine_tree.Pine_tree=0
 /Game/CallumContent/M_Pine.M_Pine=0
+/Game/CallumContent/Basic_tree_2.Basic_tree_2=0
+/Game/CallumContent/M_Brown2.M_Brown2=0
+/Game/CallumContent/M_Ivy.M_Ivy=0
+/Game/CallumContent/Ivy_tree_1.Ivy_tree_1=0
+/Game/CallumContent/Ivy_tree_2.Ivy_tree_2=0
+/Game/CallumContent/Thin_Grass.Thin_Grass=0
+/Game/CallumContent/Tall_Grass.Tall_Grass=0
+/Game/CallumContent/M_TallGrass.M_TallGrass=0
+/Game/CallumContent/Ferns.Ferns=0
+/Game/CallumContent/Tree_Trunk.Tree_Trunk=1
+/Game/CallumContent/M_Lily.M_Lily=0
+/Game/CallumContent/Frost_Lily_plant.Frost_Lily_plant=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Mesh=True
+StaticMesh.LODCustomMode=True
 
 
