more skeletal mesh changes

--- a/Closure/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Closure/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -140,6 +140,7 @@ CurrentPosGridSize=0
 RotGridEnabled=False
 SnapScaleEnabled=False
 GridEnabled=False
+CameraSpeed=1
 
 [MRU]
 MRUItem0=/Game/Maps/ThirdPersonExampleMap
@@ -232,10 +233,8 @@ LastLevel=/Game/Maps/ThirdPersonExampleMap
 CleanShutdown=True
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/MemoryObject1.MemoryObject1
-OpenAssetsAtExit=/Game/Zone1Trigger.Zone1Trigger
-OpenAssetsAtExit=/Game/Child.Child
 OpenAssetsAtExit=/Game/AdultPawn.AdultPawn
+OpenAssetsAtExit=/Game/Child.Child
 
 [RootWindow]
 ScreenPosition=X=352.000 Y=147.000
@@ -2671,6 +2670,28 @@ NameProperty.DefaultValueCategory=True
 FbxImportUI.Animation=True
 PhysicsAssetGenerationSettings.Body Creation=True
 PhysicsAssetGenerationSettings.Constraint Creation=True
+REINST_AdultPawn_C_50.Variable=True
+REINST_AdultPawn_C_50.TransformCommon=True
+REINST_AdultPawn_C_50.Sockets=True
+REINST_AdultPawn_C_50.Animation=True
+REINST_AdultPawn_C_50.Mesh=True
+REINST_AdultPawn_C_50.Materials=True
+REINST_AdultPawn_C_50.Clothing=True
+REINST_AdultPawn_C_50.ClothingSimulation=True
+REINST_AdultPawn_C_50.Physics=True
+REINST_AdultPawn_C_50.Collision=True
+REINST_AdultPawn_C_50.Lighting=True
+REINST_AdultPawn_C_50.Rendering=True
+REINST_AdultPawn_C_50.Tags=True
+REINST_AdultPawn_C_50.ComponentReplication=True
+REINST_AdultPawn_C_50.Activation=True
+REINST_AdultPawn_C_50.Cooking=True
+REINST_AdultPawn_C_50.Events=True
+Child_C.Color Grading=True
+Child_C.Film=True
+Child_C.Mobile Tonemapper=True
+Child_C.Lens=True
+Child_C.Rendering Features=True
 
 [MessageLog]
 LastLogListing=PIE
@@ -2699,6 +2720,8 @@ LastLogListing=FBXImport
 /Game/CallumContent/GrassBright.GrassBright=1
 /Game/CallumContent/M_Grey.M_Grey=1
 /Game/Child.Child=1
+/Game/Dad/dad_attached__1_.dad_attached__1_=0
+/Game/Dad/dad_attached__1__Skeleton.dad_attached__1__Skeleton=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/MemoryObject1.MemoryObject1;
@@ -2728,18 +2751,18 @@ Pawn="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-Object=
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 FloatingPawnMovement="\"Object.NavMovement.NavAgentProps\" "
 PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 MovementComponent="\"Object.NavMovement.NavAgentProps\" "
-ActorComponent=
-StaticMeshComponent=
-MeshComponent=
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-SceneComponent=
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" \"Object.Layers.Layers[4]\" "
@@ -2763,10 +2786,13 @@ PaperImporterSettings="\"Object.ImportSettings.NormalMapTextureSuffixes\" \"Obje
 UMGEditorProjectSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer.DebugResolutions.DebugResolutions[0]\" \"Object.Designer.DebugResolutions.DebugResolutions[1]\" \"Object.Designer.DebugResolutions.DebugResolutions[2]\" \"Object.Designer.DebugResolutions.DebugResolutions[3]\" \"Object.Designer.DebugResolutions.DebugResolutions[4]\" \"Object.Designer.DebugResolutions.DebugResolutions[5]\" \"Object.Designer.DebugResolutions.DebugResolutions[6]\" \"Object.Designer.DebugResolutions.DebugResolutions[7]\" \"Object.Designer.DebugResolutions.DebugResolutions[8]\" \"Object.Designer.DebugResolutions.DebugResolutions[9]\" \"Object.Designer.DebugResolutions.DebugResolutions[10]\" \"Object.Designer.DebugResolutions.DebugResolutions[11]\" \"Object.Designer.DebugResolutions.DebugResolutions[12]\" "
 AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
-Child_C=
+Child_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 MemoryObject1_C=
 AdultPawn_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 Character="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
+REINST_AdultPawn_C_50="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
+SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2909,7 +2935,7 @@ StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 BoxComponent=BoxComponent.Collision.Collision,
 ArrayProperty=ArrayProperty.DefaultValueCategory.None,
 Child_C=ArrayProperty.DefaultValueCategory.None,
-CameraComponent=CameraComponent.Lens.Lens|Depth of Field,
+CameraComponent=CameraComponent.Lens.Lens
 K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,
 K2Node_VariableSet=ArrayProperty.DefaultValueCategory.None,
 K2Node_MakeStruct=K2Node_MakeStruct.PinOptions.ShowPinForProperties,
