--- a/Closure/Config/DefaultEngine.ini
+++ b/Closure/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Closure
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/CallumContent/EnvironmentLevel.EnvironmentLevel
+GameDefaultMap=/Game/CallumContent/EnvironmentLevel.EnvironmentLevel
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -126,5 +126,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
