Working on Main Menu

--- a/Closure/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Closure/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,6 +50,7 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@1808C011
 LastExecutedLaunchName=1808C011
 LastExecutedPIEPreviewDevice=
+NewWindowPosition=(X=315,Y=148)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -75,7 +76,8 @@ SnapScaleEnabled=False
 CurrentPosGridSize=0
 
 [MRU]
-MRUItem0=/Game/CallumContent/EnvironmentLevel
+MRUItem0=/Game/CallumContent/MainMenu
+MRUItem1=/Game/CallumContent/EnvironmentLevel
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/CallumContent
@@ -102,13 +104,13 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/CallumContent/EnvironmentLevel
+LastLevel=/Game/CallumContent/MainMenu
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [DetailCategories]
 InstancedFoliageActor.TransformCommon=True
@@ -330,6 +332,47 @@ ParticleSystem.Materials=True
 ParticleSpriteEmitter.Particle=True
 ParticleSpriteEmitter.Cascade=True
 ParticleSpriteEmitter.Significance=True
+MainMenu_C.Tick=True
+MainMenu_C.Replication=True
+MainMenu_C.Input=True
+MainMenu_C.Actor=True
+K2Node_VariableGet.Color Grading=True
+K2Node_VariableGet.Film=True
+K2Node_VariableGet.Mobile Tonemapper=True
+K2Node_VariableGet.Lens=True
+K2Node_VariableGet.Rendering Features=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.Events=True
+K2Node_VariableSet.DefaultValueCategory=True
+ObjectProperty.Variable=True
+ObjectProperty.Events=True
+BP_Credits_C.Appearance=True
+BP_Credits_C.Input=True
+BP_Credits_C.Interaction=True
+BP_Credits_C.Behavior=True
+BP_Credits_C.Render Transform=True
+BP_Credits_C.Performance=True
+BP_Credits_C.Clipping=True
+BP_Credits_C.Navigation=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+WorldSettings.World=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.Physics=True
+WorldSettings.Rendering=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.VR=True
+WorldSettings.Tick=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+EnumProperty.Variable=True
+EnumProperty.DefaultValueCategory=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/CallumContent/P_Rain.P_Rain;
@@ -344,7 +387,7 @@ RecentlyPlaced=/Game/CallumContent/Cone.Cone;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=165.000
+ScreenPosition=X=422.000 Y=0.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -950,12 +993,12 @@ HierarchicalLODOutliner.TimeStamp=2019.03.20-23.16.50
 HierarchicalLODOutliner.LastCompileMethod=External
 StatsViewer.TimeStamp=2019.03.20-23.16.55
 StatsViewer.LastCompileMethod=External
-BlueprintGraph.TimeStamp=2019.03.05-21.30.40
-BlueprintGraph.LastCompileMethod=Unknown
-SequencerWidgets.TimeStamp=2019.03.05-21.30.49
-SequencerWidgets.LastCompileMethod=Unknown
-TextureEditor.TimeStamp=2019.03.05-21.30.51
-TextureEditor.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2019.03.20-23.16.48
+BlueprintGraph.LastCompileMethod=External
+SequencerWidgets.TimeStamp=2019.03.20-23.16.55
+SequencerWidgets.LastCompileMethod=External
+TextureEditor.TimeStamp=2019.03.20-23.16.55
+TextureEditor.LastCompileMethod=External
 StaticMeshEditor.TimeStamp=2019.03.20-23.16.55
 StaticMeshEditor.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2019.03.20-23.16.52
@@ -981,14 +1024,14 @@ PreviewHeight=720
 PreviewAspectRatio=16:9
 
 [DetailPropertyExpansion]
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Layout.Slot.Object.Layout.Layout"
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Layout.Slot.Object.Layout.Layout"
-PanelWidget=
-Widget=
-Visual=
-Object="\"Object.Bounds.FixedRelativeBoundingBox\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.NormalPadding\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.NormalPadding\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.NormalPadding\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.NormalPadding\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.NormalPadding\" "
+Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.NormalPadding\" "
 Image="\"Object.Appearance.Brush\" "
-VerticalBox="\"Object.Layout.Slot.Object.Layout.Layout"
+VerticalBox=
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1000,6 +1043,17 @@ ParticleSystem="\"Object.Bounds.FixedRelativeBoundingBox\" "
 /Game/CallumContent/Cone.Cone=1
 /Game/Water/Mesh/WaterMaterial_Inst.WaterMaterial_Inst=1
 /Game/CallumContent/P_Rain.P_Rain=0
+/Game/CallumContent/MainMenu.MainMenu:PersistentLevel.MainMenu=0
+/Game/CallumContent/UI/Play_Pressed.Play_Pressed=0
+/Game/CallumContent/UI/titlescreen_back_on.titlescreen_back_on=0
+/Game/CallumContent/UI/titlescreen_credits_on.titlescreen_credits_on=0
+/Game/CallumContent/UI/ControlsPressed.ControlsPressed=0
+/Game/CallumContent/UI/BackPressed.BackPressed=0
+/Game/CallumContent/UI/CreditsPressed.CreditsPressed=0
+/Game/CallumContent/UI/QuitPressed.QuitPressed=0
+/Game/Child.Child=0
+/Game/CallumContent/BP_Controls.BP_Controls=0
+/Game/CallumContent/BP_Credits.BP_Credits=0
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
