--- a/Closure/Config/DefaultEngine.ini
+++ b/Closure/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Closure
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/CallumContent/EnvironmentLevel.EnvironmentLevel
-GameDefaultMap=/Game/CallumContent/EnvironmentLevel.EnvironmentLevel
+EditorStartupMap=/Game/CallumContent/MainMenu.MainMenu
+GameDefaultMap=/Game/CallumContent/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -126,4 +126,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
 
